--- a/notebooks/jupyter/OSM_Python_Query.ipynb
+++ b/notebooks/jupyter/OSM_Python_Query.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,6 +77,7 @@
     "    'Rwanda',\n",
     "    'Somalia',\n",
     "    'Sudan',\n",
+    "    'South Sudan',\n",
     "    'Uganda',\n",
     "    'Tanzania',\n",
     "    'Zambia',\n",
@@ -118,6 +119,26 @@
     "    'Sierra Leone',\n",
     "    'Togo'\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(countries)"
    ]
   },
   {
