--- a/notebooks/jupyter/ERL19/ERL-Analysis-2019-02-22.ipynb
+++ b/notebooks/jupyter/ERL19/ERL-Analysis-2019-02-22.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,14 +162,14 @@
     "data_raw = '../../data/raw/'\n",
     "data_temp = '../../temp_data/'\n",
     "data_interim = '../../interim/'\n",
-    "data_analysis = '../../temp_data/ERL_data/Data20190222/'\n",
+    "data_analysis = '/Users/cascade/Github/Pop-ERL/temp_data/ERL19/ERL_data/Data20190222/'\n",
     "erl_data = '../../temp_data/ERL_data/'\n",
     "downloads = '/Users/cascade/Downloads/'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
     "# GHS2000_old = gpd.read_file(data_analysis+'GHS_POP_GPW42000_final20190122.shp')\n",
     "# GHS2015_old = gpd.read_file(data_analysis+'GHS_POP_GPW42015_final20190122.shp')\n",
     "\n",
-    "# Load data: ...20190222.shp files have FIDs removed, S Sudan added, rainfall zones, and regions\n",
+    "# Load data: ...20190222.shp files have FIDs removed, S Sudan added, rainfall zones, and regions, <5k removed\n",
     "\n",
     "GHS2000 = gpd.read_file(data_analysis+'GHS_POP_GPW42000_20190222.shp', driver = 'ESRI Shapefile')\n",
     "GHS2015 = gpd.read_file(data_analysis+'GHS_POP_GPW42015_20190222.shp', driver = 'ESRI Shapefile')\n",
@@ -809,23 +809,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "32365803.83605957\n",
-      "25709111.074539185\n",
-      "47390039.89875334\n",
-      "34533143.84853259\n",
-      "44698553.905130506\n",
-      "112615952.7138133\n",
-      "168529234.33390665\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# WP 2015 Chunks\n",
     "WP2015_50k = WP2015.loc[(WP2015['PopTot'] <= 5*10**4), 'PopTot'].sum()\n",
@@ -852,23 +838,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "48557563.0\n",
-      "28421033.0\n",
-      "51220402.0\n",
-      "35535824.0\n",
-      "39009926.0\n",
-      "126125882.0\n",
-      "173905597.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# LS 2015 Chunks \n",
     "\n",
@@ -896,23 +868,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "62582298.552251935\n",
-      "47452640.07127285\n",
-      "77159918.01437423\n",
-      "47179685.36911802\n",
-      "48538893.546690166\n",
-      "133380771.76077779\n",
-      "163536379.12052602\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#GHS 2015 Chunks\n",
     "\n",
@@ -940,23 +898,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "51129888.0\n",
-      "39115705.0\n",
-      "75087201.0\n",
-      "54679110.0\n",
-      "51959247.0\n",
-      "125045247.0\n",
-      "181894436.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# WPE 2016 Chunks\n",
     "WPE2016_50k = WPE2016.loc[(WPE2016['PopTot'] <= 5*10**4), 'PopTot'].sum()\n",
@@ -983,23 +927,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "28340887.602341175\n",
-      "21048367.255339146\n",
-      "32130332.743869938\n",
-      "27971259.82409185\n",
-      "34732227.645263076\n",
-      "87861582.9244433\n",
-      "54542867.037235975\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# WP 2000 Chunks\n",
     "WP2000_50k = WP2000.loc[(WP2000['PopTot'] <= 5*10**4), 'PopTot'].sum()\n",
@@ -1026,23 +956,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "60381751.63308716\n",
-      "38717654.62478638\n",
-      "51723732.53552246\n",
-      "34169614.5284729\n",
-      "31058496.36251831\n",
-      "84893172.39413452\n",
-      "66563435.2522583\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# GHS 2000 Chunks\n",
     "GHS2000_50k = GHS2000.loc[(GHS2000['PopTot'] <= 5*10**4), 'PopTot'].sum()\n",
@@ -1069,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,22 +1052,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "216051249.6843872\n",
-      "282913435.5537072\n",
-      "144223075.07090518\n",
-      "184696652.5630152\n",
-      "202744748.0\n",
-      "271971151.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for dataset in data_chunks:\n",
     "    print(np.sum(dataset[0:5]))"
