--- a/notebooks/jupyter/ERL19/Polygon_Country_Fix.ipynb
+++ b/notebooks/jupyter/ERL19/Polygon_Country_Fix.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = find_dup(GHS2000, 'FID')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -114,67 +123,125 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>num</th>\n",
-       "      <th>state</th>\n",
-       "      <th>cool</th>\n",
+       "      <th>osm_id</th>\n",
+       "      <th>FID</th>\n",
+       "      <th>country</th>\n",
+       "      <th>city</th>\n",
+       "      <th>osm_type</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>PopTot</th>\n",
+       "      <th>aez_class</th>\n",
+       "      <th>geometry</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>mt</td>\n",
-       "      <td>yes</td>\n",
+       "      <th>14</th>\n",
+       "      <td>273094269</td>\n",
+       "      <td>624</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Bordj El Kiffan</td>\n",
+       "      <td>town</td>\n",
+       "      <td>36.747273</td>\n",
+       "      <td>3.190895</td>\n",
+       "      <td>3.873888e+06</td>\n",
+       "      <td>Subtropic - warm / subhumid</td>\n",
+       "      <td>POLYGON ((2.960095682991406 36.82071885667165,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>ca</td>\n",
-       "      <td>yes</td>\n",
+       "      <th>15</th>\n",
+       "      <td>287172660</td>\n",
+       "      <td>624</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Bir Mourad Raïs</td>\n",
+       "      <td>town</td>\n",
+       "      <td>36.739408</td>\n",
+       "      <td>3.050026</td>\n",
+       "      <td>3.873888e+06</td>\n",
+       "      <td>Subtropic - warm / subhumid</td>\n",
+       "      <td>POLYGON ((2.960095682991406 36.82071885667165,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>mt</td>\n",
-       "      <td>yes</td>\n",
+       "      <th>16</th>\n",
+       "      <td>287485747</td>\n",
+       "      <td>624</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>El Biar</td>\n",
+       "      <td>town</td>\n",
+       "      <td>36.768998</td>\n",
+       "      <td>3.029947</td>\n",
+       "      <td>3.873888e+06</td>\n",
+       "      <td>Subtropic - warm / subhumid</td>\n",
+       "      <td>POLYGON ((2.960095682991406 36.82071885667165,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>pa</td>\n",
-       "      <td>no</td>\n",
+       "      <th>17</th>\n",
+       "      <td>288037571</td>\n",
+       "      <td>624</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Bab Ezzouar</td>\n",
+       "      <td>town</td>\n",
+       "      <td>36.722026</td>\n",
+       "      <td>3.185668</td>\n",
+       "      <td>3.873888e+06</td>\n",
+       "      <td>Subtropic - warm / subhumid</td>\n",
+       "      <td>POLYGON ((2.960095682991406 36.82071885667165,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3</td>\n",
-       "      <td>pa</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1</td>\n",
-       "      <td>mt</td>\n",
-       "      <td>yes</td>\n",
+       "      <th>18</th>\n",
+       "      <td>288090062</td>\n",
+       "      <td>624</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Beni Messous</td>\n",
+       "      <td>town</td>\n",
+       "      <td>36.779616</td>\n",
+       "      <td>2.975394</td>\n",
+       "      <td>3.873888e+06</td>\n",
+       "      <td>Subtropic - warm / subhumid</td>\n",
+       "      <td>POLYGON ((2.960095682991406 36.82071885667165,...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   num state cool\n",
-       "0    1    mt  yes\n",
-       "1    1    ca  yes\n",
-       "2    2    mt  yes\n",
-       "3    3    pa   no\n",
-       "4    3    pa  yes\n",
-       "5    1    mt  yes"
+       "       osm_id  FID  country             city osm_type        lat       lon  \\\n",
+       "14  273094269  624  Algeria  Bordj El Kiffan     town  36.747273  3.190895   \n",
+       "15  287172660  624  Algeria  Bir Mourad Raïs     town  36.739408  3.050026   \n",
+       "16  287485747  624  Algeria          El Biar     town  36.768998  3.029947   \n",
+       "17  288037571  624  Algeria      Bab Ezzouar     town  36.722026  3.185668   \n",
+       "18  288090062  624  Algeria     Beni Messous     town  36.779616  2.975394   \n",
+       "\n",
+       "          PopTot                    aez_class  \\\n",
+       "14  3.873888e+06  Subtropic - warm / subhumid   \n",
+       "15  3.873888e+06  Subtropic - warm / subhumid   \n",
+       "16  3.873888e+06  Subtropic - warm / subhumid   \n",
+       "17  3.873888e+06  Subtropic - warm / subhumid   \n",
+       "18  3.873888e+06  Subtropic - warm / subhumid   \n",
+       "\n",
+       "                                             geometry  \n",
+       "14  POLYGON ((2.960095682991406 36.82071885667165,...  \n",
+       "15  POLYGON ((2.960095682991406 36.82071885667165,...  \n",
+       "16  POLYGON ((2.960095682991406 36.82071885667165,...  \n",
+       "17  POLYGON ((2.960095682991406 36.82071885667165,...  \n",
+       "18  POLYGON ((2.960095682991406 36.82071885667165,...  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "num = [1,1,2,3,3,1]\n",
     "state = ['mt', 'ca', 'mt', 'pa', 'pa', 'mt']\n",
@@ -191,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,20 +267,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ca 1\n",
-      "mt 1\n",
-      "mt 2\n",
-      "pa 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for key, value in out:\n",
     "    print(key, value)"
@@ -221,24 +277,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "num\n",
-       "1    [ca, mt]\n",
-       "2        [mt]\n",
-       "3        [pa]\n",
-       "Name: state, dtype: object"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "g = test.groupby('num')['state'].apply(np.unique)\n",
     "g"
@@ -246,27 +287,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5854, 10)"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test.groupby(['state','num']).size().reset_index().rename(columns={0:'count'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,27 +305,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pandas.core.groupby.groupby.DataFrameGroupBy object at 0x1a2b4dfac8>"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test.groupby(['FID','country'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,368 +323,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Algeria 54\n",
-      "Algeria 138\n",
-      "Algeria 172\n",
-      "Algeria 197\n",
-      "Algeria 232\n",
-      "Algeria 240\n",
-      "Algeria 246\n",
-      "Algeria 257\n",
-      "Algeria 327\n",
-      "Algeria 329\n",
-      "Algeria 368\n",
-      "Algeria 435\n",
-      "Algeria 437\n",
-      "Algeria 467\n",
-      "Algeria 518\n",
-      "Algeria 556\n",
-      "Algeria 614\n",
-      "Algeria 619\n",
-      "Algeria 624\n",
-      "Algeria 712\n",
-      "Algeria 754\n",
-      "Algeria 766\n",
-      "Algeria 772\n",
-      "Algeria 836\n",
-      "Algeria 843\n",
-      "Algeria 1043\n",
-      "Algeria 1065\n",
-      "Algeria 1223\n",
-      "Algeria 1276\n",
-      "Algeria 1377\n",
-      "Algeria 1415\n",
-      "Algeria 1478\n",
-      "Algeria 1712\n",
-      "Algeria 2210\n",
-      "Algeria 3046\n",
-      "Algeria 3134\n",
-      "Algeria 3566\n",
-      "Algeria 3798\n",
-      "Angola 36450\n",
-      "Angola 36509\n",
-      "Angola 37544\n",
-      "Angola 38670\n",
-      "Angola 38879\n",
-      "Angola 39782\n",
-      "Angola 39961\n",
-      "Benin 15600\n",
-      "Benin 21647\n",
-      "Benin 22327\n",
-      "Benin 23165\n",
-      "Benin 23347\n",
-      "Botswana 43675\n",
-      "Burkina Faso 11146\n",
-      "Burkina Faso 12993\n",
-      "Burkina Faso 14200\n",
-      "Burundi 33762\n",
-      "Cameroon 15285\n",
-      "Cameroon 24910\n",
-      "Cameroon 26543\n",
-      "Cameroon 26570\n",
-      "Cameroon 26677\n",
-      "Cape Verde 5507\n",
-      "Central African Republic 24661\n",
-      "Central African Republic 26404\n",
-      "Chad 11838\n",
-      "Comoros 38746\n",
-      "Congo-Brazzaville 28047\n",
-      "Congo-Brazzaville 34633\n",
-      "Côte d'Ivoire 25425\n",
-      "Djibouti 13083\n",
-      "Egypt 4235\n",
-      "Egypt 4256\n",
-      "Egypt 4341\n",
-      "Egypt 4483\n",
-      "Egypt 4593\n",
-      "Egypt 4915\n",
-      "Egypt 4987\n",
-      "Egypt 5050\n",
-      "Egypt 5084\n",
-      "Egypt 5306\n",
-      "Egypt 5309\n",
-      "Ethiopia 17136\n",
-      "Ethiopia 18191\n",
-      "Ethiopia 19267\n",
-      "Gabon 29243\n",
-      "Gambia 8613\n",
-      "Ghana 14843\n",
-      "Ghana 20727\n",
-      "Ghana 20874\n",
-      "Ghana 20924\n",
-      "Ghana 20960\n",
-      "Ghana 21097\n",
-      "Ghana 21723\n",
-      "Ghana 21876\n",
-      "Ghana 21908\n",
-      "Ghana 22082\n",
-      "Ghana 22084\n",
-      "Ghana 22209\n",
-      "Ghana 22749\n",
-      "Ghana 22883\n",
-      "Ghana 23742\n",
-      "Ghana 23823\n",
-      "Ghana 23932\n",
-      "Ghana 23934\n",
-      "Ghana 24027\n",
-      "Ghana 24037\n",
-      "Ghana 24526\n",
-      "Ghana 24756\n",
-      "Ghana 24885\n",
-      "Ghana 25004\n",
-      "Ghana 25506\n",
-      "Ghana 25615\n",
-      "Ghana 25629\n",
-      "Ghana 25913\n",
-      "Ghana 25915\n",
-      "Ghana 25991\n",
-      "Guinea 13052\n",
-      "Guinea 13447\n",
-      "Guinea 14296\n",
-      "Guinea 16062\n",
-      "Guinea 16896\n",
-      "Guinea 17546\n",
-      "Guinea 18781\n",
-      "Kenya 28750\n",
-      "Kenya 29454\n",
-      "Kenya 29497\n",
-      "Kenya 29689\n",
-      "Kenya 29817\n",
-      "Kenya 29883\n",
-      "Kenya 30658\n",
-      "Kenya 30840\n",
-      "Kenya 30917\n",
-      "Kenya 30944\n",
-      "Kenya 31045\n",
-      "Kenya 31131\n",
-      "Kenya 31186\n",
-      "Kenya 31255\n",
-      "Kenya 31373\n",
-      "Kenya 32157\n",
-      "Lesotho 44623\n",
-      "Liberia 21903\n",
-      "Liberia 22352\n",
-      "Liberia 23659\n",
-      "Libya 3444\n",
-      "Libya 3475\n",
-      "Libya 3519\n",
-      "Libya 3568\n",
-      "Libya 3685\n",
-      "Libya 3752\n",
-      "Libya 3911\n",
-      "Libya 5265\n",
-      "Libya 5285\n",
-      "Madagascar 42165\n",
-      "Madagascar 42542\n",
-      "Malawi 38603\n",
-      "Malawi 38703\n",
-      "Malawi 40572\n",
-      "Malawi 40716\n",
-      "Mali 6533\n",
-      "Mali 7309\n",
-      "Mali 7751\n",
-      "Mali 8402\n",
-      "Mali 8468\n",
-      "Mali 8773\n",
-      "Mali 9090\n",
-      "Mali 9703\n",
-      "Mali 9704\n",
-      "Mali 10000\n",
-      "Mali 10081\n",
-      "Mali 10294\n",
-      "Mali 10413\n",
-      "Mali 10546\n",
-      "Mali 10846\n",
-      "Mali 13439\n",
-      "Mauritius 42592\n",
-      "Mauritius 42701\n",
-      "Morocco 1383\n",
-      "Morocco 1534\n",
-      "Morocco 1783\n",
-      "Morocco 1927\n",
-      "Morocco 1985\n",
-      "Morocco 2131\n",
-      "Morocco 2175\n",
-      "Morocco 2829\n",
-      "Morocco 2878\n",
-      "Morocco 2892\n",
-      "Morocco 2893\n",
-      "Morocco 3081\n",
-      "Morocco 3136\n",
-      "Morocco 3158\n",
-      "Morocco 3818\n",
-      "Morocco 3905\n",
-      "Morocco 3936\n",
-      "Morocco 3968\n",
-      "Morocco 4865\n",
-      "Morocco 4866\n",
-      "Morocco 4907\n",
-      "Mozambique 39785\n",
-      "Mozambique 44057\n",
-      "Namibia 41611\n",
-      "Niger 8225\n",
-      "Nigeria 9776\n",
-      "Nigeria 10867\n",
-      "Nigeria 11114\n",
-      "Nigeria 11398\n",
-      "Nigeria 12435\n",
-      "Nigeria 12568\n",
-      "Nigeria 13247\n",
-      "Nigeria 13871\n",
-      "Nigeria 14134\n",
-      "Nigeria 15068\n",
-      "Nigeria 15390\n",
-      "Nigeria 15794\n",
-      "Nigeria 17528\n",
-      "Nigeria 17937\n",
-      "Nigeria 17996\n",
-      "Nigeria 18812\n",
-      "Nigeria 19922\n",
-      "Nigeria 20259\n",
-      "Nigeria 20379\n",
-      "Nigeria 20430\n",
-      "Nigeria 20670\n",
-      "Nigeria 20782\n",
-      "Nigeria 21203\n",
-      "Nigeria 23347\n",
-      "Nigeria 24657\n",
-      "Nigeria 24919\n",
-      "Nigeria 25044\n",
-      "Nigeria 26167\n",
-      "Rwanda 31640\n",
-      "Rwanda 31644\n",
-      "Rwanda 31718\n",
-      "Rwanda 31739\n",
-      "Rwanda 32060\n",
-      "Rwanda 32199\n",
-      "Rwanda 32272\n",
-      "Rwanda 32494\n",
-      "Réunion 42845\n",
-      "Réunion 42883\n",
-      "Réunion 42894\n",
-      "Réunion 42952\n",
-      "Réunion 42961\n",
-      "Senegal 5637\n",
-      "Senegal 6349\n",
-      "Senegal 6439\n",
-      "Senegal 6512\n",
-      "Senegal 6692\n",
-      "Senegal 6767\n",
-      "Senegal 6965\n",
-      "Senegal 7013\n",
-      "Sierra Leone 17938\n",
-      "Sierra Leone 18631\n",
-      "Sierra Leone 18985\n",
-      "Somalia 15507\n",
-      "Somalia 16865\n",
-      "Somalia 16872\n",
-      "Somalia 18862\n",
-      "Somalia 27422\n",
-      "Somalia 27838\n",
-      "Somalia 28034\n",
-      "South Africa 43530\n",
-      "South Africa 43610\n",
-      "South Africa 43639\n",
-      "South Africa 43642\n",
-      "South Africa 43655\n",
-      "South Africa 43710\n",
-      "South Africa 43881\n",
-      "South Africa 43913\n",
-      "South Africa 43936\n",
-      "South Africa 43956\n",
-      "South Africa 43957\n",
-      "South Africa 43963\n",
-      "South Africa 43971\n",
-      "South Africa 43976\n",
-      "South Africa 43991\n",
-      "South Africa 43997\n",
-      "South Africa 44010\n",
-      "South Africa 44015\n",
-      "South Africa 44027\n",
-      "South Africa 44036\n",
-      "South Africa 44047\n",
-      "South Africa 44157\n",
-      "South Africa 44214\n",
-      "South Africa 44228\n",
-      "South Africa 44325\n",
-      "South Africa 44338\n",
-      "South Africa 44340\n",
-      "South Africa 44369\n",
-      "South Africa 44376\n",
-      "South Africa 44381\n",
-      "South Africa 44411\n",
-      "South Africa 44421\n",
-      "South Africa 44475\n",
-      "South Africa 44582\n",
-      "South Africa 44685\n",
-      "South Africa 44686\n",
-      "South Africa 44700\n",
-      "South Africa 44720\n",
-      "South Africa 44829\n",
-      "South Africa 44835\n",
-      "South Africa 44886\n",
-      "South Africa 44894\n",
-      "South Africa 44920\n",
-      "South Africa 45078\n",
-      "South Africa 45084\n",
-      "South Africa 45120\n",
-      "South Africa 45127\n",
-      "South Africa 45130\n",
-      "South Africa 45156\n",
-      "South Africa 45157\n",
-      "South Africa 45164\n",
-      "South Africa 45166\n",
-      "South Africa 45209\n",
-      "South Africa 45210\n",
-      "South Africa 45211\n",
-      "South Africa 45212\n",
-      "South Africa 45240\n",
-      "South Africa 45255\n",
-      "South Africa 45258\n",
-      "Sudan 6165\n",
-      "Sudan 6662\n",
-      "Tanzania 33243\n",
-      "Tanzania 33692\n",
-      "Tanzania 33743\n",
-      "Tanzania 34988\n",
-      "Tanzania 35967\n",
-      "Tanzania 36510\n",
-      "Togo 14198\n",
-      "Togo 24027\n",
-      "Tunisia 1\n",
-      "Tunisia 95\n",
-      "Tunisia 254\n",
-      "Tunisia 744\n",
-      "Tunisia 1375\n",
-      "Tunisia 1446\n",
-      "Tunisia 1591\n",
-      "Tunisia 2891\n",
-      "Tunisia 3286\n",
-      "Uganda 28355\n",
-      "Uganda 28401\n",
-      "Uganda 29137\n",
-      "Uganda 29227\n",
-      "Uganda 29635\n",
-      "Uganda 31313\n",
-      "Western Sahara 5277\n",
-      "Western Sahara 5288\n",
-      "Western Sahara 5372\n",
-      "Western Sahara 5387\n",
-      "Zambia 37697\n",
-      "Zambia 37701\n",
-      "Zambia 38903\n",
-      "Zambia 40344\n",
-      "Zimbabwe 41726\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test = find_dup(GHS2000, 'FID')\n",
     "\n",
